@@ -119,6 +119,9 @@
 	Fixed assertion failure on renaming files with Ctrl-A/Ctrl-X when cursor
 	is positioned on certain file from the range.
 
+	Fixed a "race" with file system when we could load outdated file list and
+	thus miss some file system updates.
+
 0.9-beta to 0.9
 
 	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.
